--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "firebase-admin": "^11.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
