--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-ejs-layouts": "^2.5.1",
     "firebase-admin": "^11.10.1",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^7.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
