--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": ">=14 <15"
+    "node": "18.x"
   },
   "scripts": {
     "start": "nodemon --inspect index.js",
