--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
+        "src": "src/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/",
-        "dest": "index.js"
+        "src": "/.*",
+        "dest": "src/index.js"
       }
     ]
   }
+  
