Revert "Fix api user"

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-URI_MONGODB=mongodb+srv://minhto28dev:uwvMIB1tPY1bQA8v@baemin.azl85up.mongodb.net/demo1
+URI_MONGODB=mongodb+srv://minhto28dev:uwvMIB1tPY1bQA8v@baemin.azl85up.mongodb.net/Shopping
 EMAIL=milkissily@gmail.com
 PASS=nhhdcrvxcsihlkmb
 BUCKET=gs://shopping-6b085.appspot.com
