Cập nhật sản phẩm

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
-URI_MONGODB=mongodb+srv://minhto28dev:uwvMIB1tPY1bQA8v@baemin.azl85up.mongodb.net/Shopping
+URI_MONGODB=mongodb+srv://minhto28dev:uwvMIB1tPY1bQA8v@baemin.azl85up.mongodb.net/shopping
 EMAIL=milkissily@gmail.com
 PASS=nhhdcrvxcsihlkmb
 BUCKET=gs://shopping-6b085.appspot.com
-SECRECT=hsag@45S!*jdsahdjs$gg--sadhg%
+SECRECT=01234578!$
